--- a/report/package.json
+++ b/report/package.json
@@ -37,7 +37,9 @@
     "@coreui/utils": "^1.3.1",
     "@coreui/vue": "^3.2.9",
     "@coreui/vue-chartjs": "^1.0.6",
+    "babel-preset-latest": "^6.24.1",
     "vue": "~2.6.12",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.5.1",
     "vuex": "~3.6.2"
   },
