--- a/report/package.json
+++ b/report/package.json
@@ -39,6 +39,7 @@
     "@coreui/vue-chartjs": "^1.0.6",
     "babel-preset-latest": "^6.24.1",
     "vue": "~2.6.12",
+    "vue-clipboard2": "^0.3.1",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.5.1",
     "vuex": "~3.6.2"
